fix exec-maven-plugin execution